fix: hide sidebar on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -111,6 +111,10 @@ body {
     --gap: 1rem;
   }
 
+  #sidebar {
+    display: none;
+  }
+
   #messages, #form {
     width: 100%;
   }
